--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,3 +1,15 @@
 .offerStyle {
     background-color: darkcyan;
 }
+
+td {
+    vertical-align: center;
+}
+
+input {
+    max-width:20px;
+}
+
+button {
+    max-width:10px;
+}
