--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<table class="table table-dark">
+<table class="table table-dark text-center">
   <thead>
     <tr>
       <th scope="col"></th>
@@ -6,15 +6,22 @@
       <th scope="col">Tipo</th>
       <th scope="col">Precio</th>
       <th scope="col">Stock</th>
+      <th scope="col">Compra</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let product of products" [ngClass]="{offerStyle: product.offer}">
-      <th scope="row">{{product.image}}</th>
+      <td>{{product.image}}</td>
       <td>{{product.name}}</td>
       <td>{{product.type}}</td>
       <td>{{product.price}}</td>
-      <td><span *ngIf="product.stock==0">Sin Stock</span>{{product.stock}}</td>
+      <td><span *ngIf="product.stock==0">Sin Stock</span></td>
+      <td class="input-group">
+        <button class="btn text-white btn-sm" (click)="decreaseQuantity(product)">-</button>
+        <!--No me toma el $event como evento, [()]TWO-WAY-Binding ()para detectar el evento-->
+        <input class="text-center" type="text" [(ngModel)]="product.quantity" (keyUp)="changeQuantity($event, product)">
+        <button class="btn text-white btn-sm" (click)="increaseQuantity(product)">+</button>
+      </td>
     </tr>
   </tbody>
 </table>
