--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -17,10 +17,7 @@
       <td>{{product.price}}</td>
       <td><span *ngIf="product.stock==0">Sin Stock</span></td>
       <td class="input-group">
-        <button class="btn text-white btn-sm" (click)="decreaseQuantity(product)">-</button>
-        <!--No me toma el $event como evento, [()]TWO-WAY-Binding ()para detectar el evento-->
-        <input class="text-center" type="text" [(ngModel)]="product.quantity" (keyUp)="changeQuantity($event, product)">
-        <button class="btn text-white btn-sm" (click)="increaseQuantity(product)">+</button>
+        <app-input-numer *ngIf="product.stock!=0"></app-input-numer>
       </td>
     </tr>
   </tbody>
