create input-numer component

--- a/src/app/input-numer/input-numer.component.html
+++ b/src/app/input-numer/input-numer.component.html
@@ -1,4 +1,6 @@
 <!--No me toma el $event como evento, [()]TWO-WAY-Binding ()para detectar el evento-->
-<button class="btn text-white btn-sm" (click)="decreaseQuantity(product)">-</button>
-    <input class="text-center" type="text" [(ngModel)]="product.quantity" (keyUp)="changeQuantity($event, product)">
-<button class="btn text-white btn-sm" (click)="increaseQuantity(product)">+</button>
+<div class="input-group">
+	<button class="btn text-white btn-sm" (click)="decreaseQuantity()">-</button>
+	<input class="text-center" type="text" [(ngModel)]="quantity" (keyUp)="changeQuantity($event)">
+	<button class="btn text-white btn-sm" (click)="increaseQuantity()">+</button>
+</div>
