--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,24 +1,25 @@
 <table class="table table-dark text-center">
-  <thead>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Tipo</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Stock</th>
-      <th scope="col">Compra</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let product of products" [ngClass]="{offerStyle: product.offer}">
-      <td>{{product.image}}</td>
-      <td>{{product.name}}</td>
-      <td>{{product.type}}</td>
-      <td>{{product.price}}</td>
-      <td><span *ngIf="product.stock==0">Sin Stock</span></td>
-      <td class="input-group">
-        <app-input-numer *ngIf="product.stock!=0"></app-input-numer>
-      </td>
-    </tr>
-  </tbody>
+	<thead>
+		<tr>
+			<th scope="col"></th>
+			<th scope="col">Nombre</th>
+			<th scope="col">Tipo</th>
+			<th scope="col">Precio</th>
+			<th scope="col">Stock</th>
+			<th scope="col">Compra</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr *ngFor="let product of products" [ngClass]="{offerStyle: product.offer}">
+			<td>{{product.image}}</td>
+			<td>{{product.name}}</td>
+			<td>{{product.type}}</td>
+			<td>{{product.price}}</td>
+			<td><span *ngIf="product.stock==0">Sin Stock</span></td>
+			<td class="input-group">
+				<app-input-numer [(quantity)]="product.quantity" [max]="product.stock" *ngIf="product.stock!=0">
+				</app-input-numer>
+			</td>
+		</tr>
+	</tbody>
 </table>
